[tool.poetry]
name = "atlantic-cyber-bot"
version = "0.1.0"
description = ""
authors = ["Waldoh"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
schedule = "^1.2.1"
python-dotenv = "^1.0.1"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
